<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="15dp"
    app:cardBackgroundColor="@color/colorCardViewBackground"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/text_view_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="15sp"
            android:layout_centerInParent="true"
            android:text="@string/_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView

            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10sp"
            android:paddingBottom="15dp"
            android:layout_toStartOf="@id/text_view_priority"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView

            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:layout_marginLeft="10sp"
            android:paddingBottom="10dp"
            android:text="@string/description" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>